--- a/src/TimePicker.css
+++ b/src/TimePicker.css
@@ -1,33 +1,3 @@
-.time-picker {
-  position: relative;
-}
-
-.time-picker .input-container {
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.time-picker .input-container span {
-  padding: 8px;
-  font-size: 12.5px;
-  border: 1px solid #ddd;
-  border-left: none;
-  cursor: pointer;
-}
-
-.time-picker .input-container input {
-  width: 300px;
-  padding: 8px;
-  font-size: 14px;
-  border: 1px solid #ddd;
-  border-right: none;
-}
-
-.time-picker input:focus {
-  outline: none;
-}
-
 .picker {
   position: absolute;
   background: #fff;
@@ -106,6 +76,13 @@ td span {
   border-radius: 6px;
 }
 
+.hours-cell,
+.minutes-cell,
+.seconds-cell,
+.meridiem-cell {
+  cursor: pointer;
+}
+
 .buttons {
   display: flex;
   justify-content: space-between;
@@ -121,4 +98,44 @@ td span {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.c-input[readonly],
+.c-input[readonly]:focus,
+.c-input[readonly]:hover {
+  cursor: text;
+  background-color: #fff;
+}
+
+.r-input.c-input[readonly] {
+  border-right: 0px;
+}
+
+.i-sufix {
+  color: #aaa;
+  font-size: 14px;
+  border-radius: 0px;
+  border-left: 0px;
+  border-right: 1px solid #dee2e6 !important;
+}
+
+.l-input {
+  border-left: 0px;
+  padding: .375rem 0;
+}
+
+.r-input {
+  border-right: 0px;
+  padding: .375rem .75rem;
+}
+
+.lr-input {
+  border-left: 0px;
+  border-right: 0px;
+  padding: .375rem 0;
+}
+
+.l-input::-webkit-input-placeholder,
+.lr-input::-webkit-input-placeholder {
+  color: #aaa;
 }
